spark is working